--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,23 @@
 name: flutter_athropic_interface
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/nicolarigoni/flutter_athropic_interface.git
 
 environment:
-  sdk: ^3.9.2
+  sdk: ">=3.1.3 <4.0.0"
 
-# Add regular dependencies here.
+
 dependencies:
-  # path: ^1.9.0
+  flutter:
+    sdk: flutter
+  intl: ^0.20.2
+  path: ^1.9.0
+  http: ^1.3.0
+  dartdoc: ^8.3.4
+  analyzer: ^7.3.0 
+  source_gen: ^2.0.0
+  build: ^2.4.2
 
 dev_dependencies:
   lints: ^6.0.0
-  test: ^1.25.6
+  build_runner: ^2.4.0
