--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ version: 1.0.0
 repository: https://github.com/nicolarigoni/flutter_athropic_interface.git
 
 environment:
-  sdk: ">=3.1.3 <4.0.0"
+  sdk: ^3.9.2
+  flutter: ">=1.17.0"
 
 
 dependencies:
@@ -12,7 +13,7 @@ dependencies:
     sdk: flutter
   intl: ^0.20.2
   path: ^1.9.0
-  http: ^1.3.0
+  http: ^1.6.0
   dartdoc: ^8.3.4
   analyzer: ^7.3.0 
   source_gen: ^2.0.0
